Accounts templates and views
Created the new urls for user accounts and views. Modified the base urls to make
includes. Created new blocks on the base template file.

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -28,6 +28,17 @@
 	            <a href="/none">{% trans "Language" %}</a>
 	        {% endif %}
 	    </div>
+	    {% block header %}
+	    {% endblock %}
+	    
+	    {% block rightcol %}
+	    {% endblock %}
+	    
+	    {% block leftcol %}
+	    {% endblock %}
+	    
+	    {% block center %}
+	    {% endblock %}
 	    <div id="footer">
 	        blah blah | bleh | puff
 	    </div>
