--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -97,11 +97,13 @@ img {
 #userbar {
     float: right;
     margin-right: 30px;
-    padding: 0 10px 0 10px;
-    line-height: 25px;
+    margin-bottom: 10px;
+    padding: 0 10px 2px 10px;
+    height: 22px;
+    line-height: 22px;
     font-size: 11px;
     color: #FFF;
-    background: url(../assets/userbar.png);
+    background: url(../assets/userbar.png) #000 repeat;
     
     /* Fancy round borders for Webkit, Gecko and standard
        implementations */
@@ -113,18 +115,27 @@ img {
     -webkit-border-bottom-right-radius: 7px;
 }
 
+#userbar a, a:visited {
+    color: #EEE;
+}
+
+#userbar a:hover {
+    color: #AAA;
+}
+
 #header {
     clear: both;
     margin: 15px, auto, 15px, auto;
-    width: 85%;
+    width: 100%;
     height: 75px;
+    border-bottom: 1px solid #CCC;
 }
 
 #footer {
     clear: both;
     height: 100px;
     width: 100%;
-    background: #000;
+    background: #333;
     border-top: 1px solid #CCC;
     line-height: 25px;
     padding: 10px;
