Fixed userbar, added favicon and fixed favicon reference in base.html

--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -94,6 +94,11 @@ img {
 
 /* DIVS */
 
+#topbar {
+    width: 100%;
+    height: 35px;
+}
+
 #userbar {
     float: right;
     margin-right: 30px;
