User registration method replaced by django-registration and django-profiles
The default user registration method has been replaced by django-registration
and django-profiles. The templates for those actions have been replaced too.

A JS dropdown menu has been added to the base.html using jquery.

--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -128,12 +128,109 @@ img {
     color: #AAA;
 }
 
+/* USERBAR DROPDOWN */
+ul.topnav {
+	list-style: none;
+	padding: 0 20px;
+	margin: 0;
+	float: left;
+	/*width: 920px;*/
+	background: #222;
+	/*font-size: 1.2em;*/
+	background: url(topnav_bg.gif) repeat-x;
+}
+ul.topnav li {
+	float: left;
+	margin: 0;
+	padding: 0 0 0 0;
+	position: relative; /*--Declare X and Y axis base for sub navigation--*/
+}
+ul.topnav li a{
+	padding: 0px 5px;
+	color: #fff;
+	display: block;
+	text-decoration: none;
+	float: left;
+}
+ul.topnav li a:hover{
+	background: url(topnav_hover.gif) no-repeat center top;
+}
+ul.topnav li span { /*--Drop down trigger styles--*/
+	width: 17px;
+	height: 35px;
+	float: left;
+	margin-top: -5px;
+	background: url(/static/assets/subnav_btn.gif) no-repeat center top;
+}
+ul.topnav li span.subhover {background-position: center bottom; cursor: pointer;} /*--Hover effect for trigger--*/
+ul.topnav li ul.subnav {
+	list-style: none;
+	position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
+	left: 0; top: 22px;
+	background: #333;
+	margin: 0; padding: 0;
+	display: none;
+	float: left;
+	width: 100px;
+	border: 1px solid #111;
+}
+ul.topnav li ul.subnav li{
+	margin: 0; padding: 0;
+	border-top: 1px solid #252525; /*--Create bevel effect--*/
+	border-bottom: 1px solid #444; /*--Create bevel effect--*/
+	clear: both;
+	width: 100px;
+}
+html ul.topnav li ul.subnav li a {
+	float: left;
+	width: 90px;
+	background: #333 url(dropdown_linkbg.gif) no-repeat 10px center;
+	padding-left: -3px;
+}
+html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
+	background: #222 url(dropdown_linkbg.gif) no-repeat 10px center;
+}
+
+/* END STYLE FOR DROPDOWN */
+
 #header {
     clear: both;
     margin: 15px, auto, 15px, auto;
     width: 100%;
     height: 75px;
     border-bottom: 1px solid #CCC;
+}
+
+#logo {}
+#banner {}
+
+/* User Profile stuff */
+#profile {
+    border: 1px solid blue;
+    border-top: 1px solid #000;
+    width: 100%;
+    margin-top: 15px;
+    padding: 10px;
+}
+
+#profile_right {
+    float: left;
+    padding: 10px;
+    width: 45%;
+    border: 1px solid red;
+}
+
+#avatar {
+    float: left;
+    border: 1px solid green;
+}
+
+#profile_left {
+    float: right;
+    width: 45%;
+    padding: 10px;
+    border: 1px solid brown;
+    margin-right: 25px; 
 }
 
 #footer {
