--- a/src/e_cidadania/templates/accounts/login.html
+++ b/src/e_cidadania/templates/accounts/login.html
@@ -4,7 +4,7 @@
 {% block title %}{% trans "Login" %}{% endblock %}
 
 
-{% block center %}
+{% block content %}
     {% if error_message %}
         <p class="errornote">{{ error_message }}</p>
     {% endif %}
