--- a/src/e_cidadania/templates/accounts/logout.html
+++ b/src/e_cidadania/templates/accounts/logout.html
@@ -3,7 +3,7 @@
 
 {% block title %}Logout{% endblock %}
 
-{% block center %}
+{% block content %}
     <p>{% trans "Thanks for using e-cidadania. Now you can continue visting the website or log in again." %}</p>
     <br />
     <p><a href="/accounts/login">&raquo; {% trans "Login again" %}</a></p>
