--- a/src/e_cidadania/templates/accounts/profile.html
+++ b/src/e_cidadania/templates/accounts/profile.html
@@ -10,7 +10,7 @@
 Remember that this is just a test, it needs to be more polished before going into alpha
 {% endcomment %}
 
-{% block center %}
+{% block content %}
 <p>Esto es una prueba!</p>
 <p>Nombre usuario: {{ user.username }}</p>
 <p>Nombre real: {{ user.first_name }} {{ user.last_name }}</p>
