--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -8,26 +8,36 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<meta name="Description" content="Site description"/>
 		<meta name="Robots" content="all"/>
-		<!-- <script src="ruta/a/javascript" type="text/javascript"></script> -->
+		<script src="/static/js/jquery.js" type="text/javascript"></script>
+		<script src="/static/js/dropdown.js" type="text/javascript"></script>
 	</head>
 	<body>
 	    <div id="topbar">
 	    <div id="userbar">
 	        {% if user.is_authenticated %}
-	            <a href="/accounts/messages">{% trans "Messages" %}</a> | 
-	            <a href="/accounts/logout">{% trans "Logout" %}</a> | 
-	            <a href="/accounts/profile">
-	                {% if user.first_name %}
-	                    {{ user.first_name }} {{ user.last_name }}
-	                {% else %}
-	                    {{ user.username }}
-	                {% endif %}
-	            </a> | 
-	            <a href="/none">{% trans "Language" %}</a>
-	        {% else %}
-	            <a href="/accounts/register">{% trans "Register" %}</a> | 
-	            <a href="/accounts/login">{% trans "Login" %}</a> | 
-	            <a href="/none">{% trans "Language" %}</a>
+	            <ul class="topnav">  
+                    <li><a href="/accounts/messages">{% trans "Messages" %}</a> | </li>  
+                    <li><a href="/none">{% trans "Language" %}</a>| </li>
+                    <li>
+                        <a href="/accounts/profile">
+	                    {% if user.first_name %}
+	                        {{ user.first_name }} {{ user.last_name }}
+	                    {% else %}
+	                        {{ user.username }}
+	                    {% endif %}
+	                    </a>
+	                    <ul class="subnav">
+	                        <li><a href="/accounts/profile/edit">{% trans "Edit profile" %}</li>
+	                        <li><a href="/accounts/logout">{% trans "Logout" %}</li>
+	                    </ul>
+	                </li>
+	            </ul>
+            {% else %}
+                <ul class="topnav">
+                    <li><a href="/accounts/login">{% trans "Login" %}</a></li>
+                    <li><a href="/accounts/register">{% trans "Register" %}</a></li>  
+                    <li><a href="/none">{% trans "Language" %}</a></li>
+	            </ul>
 	        {% endif %}
 	    </div>
 	    </div>
@@ -44,7 +54,7 @@
 	    {% block leftcol %}
 	    {% endblock %}
 	    
-	    {% block center %}
+	    {% block content %}
 	    {% endblock %}
 	    <div id="footer">
 	        <p>e-cidadania é una ferramenta online de software libre creada pola cooperativa Cidadanía para o emprego libre de quen queira.<p>
