--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -101,7 +101,7 @@ img {
 
 #userbar {
     float: right;
-    margin-right: 30px;
+    margin-right: 50px;
     margin-bottom: 10px;
     padding: 0 10px 2px 10px;
     height: 22px;
@@ -120,7 +120,7 @@ img {
     -webkit-border-bottom-right-radius: 7px;
 }
 
-#userbar a, a:visited {
+#userbar a, #userbar a:visited {
     color: #EEE;
 }
 
@@ -131,7 +131,7 @@ img {
 /* USERBAR DROPDOWN */
 ul.topnav {
 	list-style: none;
-	padding: 0 20px;
+	padding: 0 0px;
 	margin: 0;
 	float: left;
 	/*width: 920px;*/
@@ -194,47 +194,62 @@ html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
 /* END STYLE FOR DROPDOWN */
 
 #header {
-    clear: both;
     margin: 15px, auto, 15px, auto;
     width: 100%;
     height: 75px;
-    border-bottom: 1px solid #CCC;
+
 }
 
-#logo {}
-#banner {}
+#logo {
+    float: left;
+    width: 150px;
+    height: 75px;
+    border: 1px solid red;
+}
+
+#banner {
+    float: left;
+    height: 75px;
+    border: 1px solid blue;
+}
 
 /* User Profile stuff */
 #profile {
-    border: 1px solid blue;
-    border-top: 1px solid #000;
+    clear: both;
+    border-top: 1px solid #BBB;
     width: 100%;
+    min-height: 200px;
     margin-top: 15px;
     padding: 10px;
+    background: url(/static/assets/profile_bg1.jpg) repeat-x;
 }
 
 #profile_right {
     float: left;
-    padding: 10px;
+    padding: 20px 0px 0px 25px;
     width: 45%;
-    border: 1px solid red;
+}
+
+#profile_right p {
+    margin-bottom: 10px;
 }
 
 #avatar {
     float: left;
-    border: 1px solid green;
+    /*border: 1px solid green;*/
+    color: #000;
 }
 
 #profile_left {
     float: right;
     width: 45%;
-    padding: 10px;
-    border: 1px solid brown;
+    padding: 20px 30px 0px 10px;
     margin-right: 25px; 
 }
 
 #footer {
     clear: both;
+    margin-top: 200px;
     height: 100px;
     width: 100%;
     background: #333;
