--- a/src/e_cidadania/templates/userprofile/profile/location.html
+++ b/src/e_cidadania/templates/userprofile/profile/location.html
@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% blocktrans %}{{ user }}'s Dashboard{% endblocktrans %}{% endblock %}
