--- a/src/e_cidadania/templates/userprofile/avatar/choose.html
+++ b/src/e_cidadania/templates/userprofile/avatar/choose.html
@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Choose the location of your avatar" %}{% endblock %}
@@ -21,12 +21,9 @@
 </script>
 {% endblock %}
 
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
-
 {% block content %}
 	<form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">
+	    {% csrf_token %}
 		{% if form.errors %}
 			{% for error,desc in form.errors.items %}
 				<p class="error">{{desc|join:"; "}}</p>
