--- a/src/e_cidadania/templates/userprofile/avatar/search.html
+++ b/src/e_cidadania/templates/userprofile/avatar/search.html
@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Search for an image on Picasa Web" %}{% endblock %}
