--- a/src/e_cidadania/templates/userprofile/profile/delete.html
+++ b/src/e_cidadania/templates/userprofile/profile/delete.html
@@ -5,16 +5,16 @@
 {% block robots %}noindex,nofollow{% endblock %}
 
 {% block content %}
-
-    <div id="profile">
-        <p>{% trans "Remove profile" %}</p>
-        <p>{% trans "It erases all your private data except your username. You can refill the information later if you want to." %}</p></br>
-    
-        <form action="" method="post" enctype="multipart/form-data">
+    <div id="contenttitles">{% trans "Remove profile" %}</div>
+        <div id="profile_right">
+            <p>{% trans "It erases all your private data except your username. You can refill the information later if you want to." %}</p>
+            
+            <form action="" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
             <fieldset>
                 <legend>{% trans "Delete your personal information" %}</legend></br>
 		    	<p><label for="remove">{% trans "Are you sure?" %}</label> <input id="remove" type="submit" value="{% trans "Yes" %}" /></p>
 		    </fieldset>
 	    </form>
-	</div>
+        </div>
 {% endblock %}
