--- a/src/e_cidadania/templates/userprofile/profile/location_done.html
+++ b/src/e_cidadania/templates/userprofile/profile/location_done.html
@@ -1,16 +1,13 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% blocktrans %}{{ user }}'s Dashboard{% endblocktrans %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
 
 {% block content %}
 	<p class="success large">
-		{% trans "Your profile information has been updated successfully" %}.
+		{% trans "Your profile information has been updated successfully." %}.
 	</p>
 {% endblock %}
 
