--- a/src/e_cidadania/templates/userprofile/profile/location_done.html
+++ b/src/e_cidadania/templates/userprofile/profile/location_done.html
@@ -6,14 +6,6 @@
 
 
 {% block content %}
-	<p class="success large">
-		{% trans "Your profile information has been updated successfully." %}.
-	</p>
-{% endblock %}
-
-{% block content-related %}
-<div class="box">
-  <h3>{% trans "Location information" %}</h3>
-    <p>{% trans "Define your location information" %}.</p>
-</div>
+	<h3>{% trans "Your profile information has been updated successfully" %}.</h3>
+	<p><a href="/accounts/profile">Go back to your profile</p>
 {% endblock %}
